# IsfActuCpp

./: .gitignore  README.md  meson.build
include/gas_analytics/: anomaly_detector.hpp  csv_exporter.hpp  daily_consumption.hpp  grouping.hpp  hourly_record.hpp  http_client.hpp  statistics_engine.hpp  terega_api.hpp
src/: anomaly_detector.cpp  csv_exporter.cpp  daily_consumption.cpp  grouping.cpp  http_client.cpp  main.cpp  statistics_engine.cpp  terega_api.cpp
